--- a/index.html
+++ b/index.html
@@ -293,6 +293,20 @@
 
     <section class="akhir mb-5">
       <div class="container">
+        <div class="row bg-primary rounded">
+          <div class="col-6 text-light my-4">
+              <h3>Interested work with me?</h3>
+          </div>
+          <div class="col-6 my-4">
+              <a href="#" class="btn btn-light px-5 rounded">View More Project</a>
+              <a href="#" class="btn btn btn-outline-light px-5 ml-2 rounded">Contact</a>
+          </div>
+        </div>
+      </div>
+    </section>
+<!-- 
+    <section class="akhir mb-5">
+      <div class="container">
         <div class="row">
           <div class="col-12 bg-akhir text-center">
               <h3>Hire me now</h3>
@@ -302,7 +316,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="footer mt-3 text-light">
       <div class="container">
