--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
             <p class="btn btn-outline-info p-1">JS</p>
             <hr class="d-none d-lg-block">
             <p>Virtual Skill Competition Web Technoligies by GDTLAB Indonesia</p>
+            <!-- asdsad -->
             <hr class="d-sm-block d-lg-none">
           </div>
         </div>
