--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
     <section class="akhir mb-5">
       <div class="container">
         <div class="row bg-primary rounded">
-          <div class="col-6 text-light my-4">
+          <div class="col-lg-6 text-light my-4">
               <h3>Interested work with me?</h3>
           </div>
-          <div class="col-6 my-4">
+          <div class="col-lg-6 my-2 my-lg-4">
               <a href="#" class="btn btn-light px-5 rounded">View More Project</a>
-              <a href="#" class="btn btn btn-outline-light px-5 ml-2 rounded">Contact</a>
+              <a href="a href="mailto:anandaar0404@gmail.com" class="btn btn btn-outline-light px-5 ml-2 rounded"><i class="fal fa-envelope fa-lg mr-4"> Mail Me</i></a>
           </div>
         </div>
       </div>
@@ -342,7 +342,7 @@
           <div class="col-md-3 my-0 my-md-5">
             <h6 class="my-4 my-md-3">CONTACT US</h6>
             <p>anandaar0404@gmail.com</p>
-            <a href="https://github.com/AnandaArya">https://github.com/Anandaarya</a>
+            <!-- <a href="https://github.com/AnandaArya">https://github.com/Anandaarya</a> -->
           </div>
         </div>
         <div class="row">
