--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           </div>
           <div class="col-lg-6 my-2 my-lg-4">
               <a href="#" class="btn btn-light px-5 rounded">View More Project</a>
-              <a href="a href="mailto:anandaar0404@gmail.com" class="btn btn btn-outline-light px-5 ml-2 rounded"><i class="fal fa-envelope fa-lg mr-4"> Mail Me</i></a>
+              <a href="mailto:anandaar0404@gmail.com" class="btn btn btn-outline-light px-5 ml-2 rounded"><i class="fal fa-envelope fa-lg mr-4"> Mail Me</i></a>
           </div>
         </div>
       </div>
