--- a/index.html
+++ b/index.html
@@ -286,6 +286,18 @@
             <!-- asdsad -->
             <hr class="d-sm-block d-lg-none">
           </div>
+          <div class="col-lg-6 my-2 my-lg-5">
+            <img src="img/portfolio-9.png" class="img-fluid img-portfolio border" alt="Services5">
+          </div>
+          <div class="col-lg-6 my-2 my-lg-5">
+            <h4 class="mt-lg-5">Library Management Apps</h4>
+            <p class="btn btn-outline-info p-1">Java</p>
+            <p class="btn btn-outline-info p-1">Netbeans</p>
+            <hr class="d-none d-lg-block">
+            <p>Processing Library Data Created Using Java With Netbeans IDE</p>
+            <!-- asdsad -->
+            <hr class="d-sm-block d-lg-none">
+          </div>
         </div>
       </div>
     </section>
