--- a/index.html
+++ b/index.html
@@ -331,7 +331,23 @@
       </div>
     </section> -->
 
-    <section class="footer mt-3 text-light">
+    <section class="footer">
+      <div class="container">
+        <hr>
+        <div class="row">
+          <div class="col-lg-6 my-4">
+            <h3>Social Media</h3>
+          </div>
+          <div class="col-lg-6 my-4 text-lg-right">
+            <a href="https://www.instagram.com/ananda.aryaa/" class="mr-3"><i class="fab fa-facebook-square fa-3x fb-color"></i></a>
+            <a href="https://web.facebook.com/ananda.pratamaarridho" class="mr-3"><i class="fab fa-instagram fa-3x insta-color"></i></a>
+            <a href="https://wa.me/089664704055" class="mr-3"><i class="fab fa-whatsapp-square fa-3x wa-color"></i></a>
+            <a href="https://line.me/R/ti/p/arya02104" class="mr-3"><i class="fab fa-line fa-3x line-color"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- <section class="footer mt-3">
       <div class="container">
         <div class="row">
           <div class="col-md-3 my-2 my-md-5">
@@ -348,13 +364,14 @@
           </div>
           <div class="col-md-2 my-0 my-md-5">
             <h6 class="my-4 my-md-3">Social Media</h6>
-              <a href="#" class="d-block">IG : ananda.aryaa</a>
+              <a href="#" class="d-block"><i class="fab fa-github fa-3x"></i></a>
               <a href="#" class="d-block">FB : Arya Pratama</a>
           </div>
           <div class="col-md-3 my-0 my-md-5">
             <h6 class="my-4 my-md-3">CONTACT US</h6>
+            <p>089664704055</p>
             <p>anandaar0404@gmail.com</p>
-            <!-- <a href="https://github.com/AnandaArya">https://github.com/Anandaarya</a> -->
+            <a href="https://github.com/AnandaArya">https://github.com/Anandaarya</a>
           </div>
         </div>
         <div class="row">
@@ -363,7 +380,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
