--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       </div>
     </section> -->
 
-    <section class="footer">
+    <section class="footer-2">
       <div class="container">
         <hr>
         <div class="row">
