--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
           <div class="col-lg-6 text-light my-4">
               <h3>Interested work with me?</h3>
           </div>
-          <div class="col-lg-6 my-2 my-lg-4">
-              <a href="#" class="btn btn-light px-5 rounded">View More Project</a>
-              <a href="mailto:anandaar0404@gmail.com" class="btn btn btn-outline-light px-5 ml-2 rounded"><i class="fal fa-envelope fa-lg mr-4"> Mail Me</i></a>
+          <div class="col-lg-6 my-2 my-lg-4 text-lg-right">
+              <a href="#" class="btn btn-light px-4 mr-2 rounded">View More Project</a>
+              <a href="mailto:anandaar0404@gmail.com" class="btn btn btn-outline-light px-4 rounded"><i class="fal fa-envelope fa-lg"> Mail Me....</i></a>
           </div>
         </div>
       </div>
