Add Github link

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <a class="nav-item nav-link" href="#">Blog</a>
           </div>
           <div class="navbar-nav tombol-nav ml-0 ml-sm-0 ml-lg-5">
-            <a class="nav-item nav-link tombol-sign btn btn-outline-dark ml-0 ml-lg-5 my-2 px-4" href="#"><i class="fab fa-github fa-lg"></i></a>
-            <a class="nav-item nav-link btn btn-dark text-light ml-0 ml-lg-2 my-2 px-4" href="#"><i class="fab fa-instagram fa-lg"></i></a>
+            <a class="nav-item nav-link tombol-sign btn btn-outline-dark ml-0 ml-lg-5 my-2 px-4" href="https://github.com/AnandaArya"><i class="fab fa-github fa-lg"></i></a>
+            <a class="nav-item nav-link btn btn-dark text-light ml-0 ml-lg-2 my-2 px-4" href="https://www.instagram.com/ananda.aryaa/"><i class="fab fa-instagram fa-lg"></i></a>
           </div>
         </div>
       </div>
@@ -347,42 +347,7 @@
         </div>
       </div>
     </section>
-    <!-- <section class="footer mt-3">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 my-2 my-md-5">
-            <h5 class="my-4 my-md-3">Ananda Arya</h5>
-            <p>My name is Ananda Arya Pratama from Banjarmasin. graduated from major in Software Engineering</p>
-          </div>
-          <div class="col-md-2 offset-md-2 my-0 my-md-5">
-            <h6 class="my-4 my-md-3">SERVICES</h6>
-              <a href="#" class="d-block">Blog</a>
-              <a href="#" class="d-block">Partners</a>
-              <a href="#" class="d-block">Apps & Plugins</a>
-              <a href="#" class="d-block">FAQ</a>
-              <a href="#" class="d-block">UI Kit</a>
-          </div>
-          <div class="col-md-2 my-0 my-md-5">
-            <h6 class="my-4 my-md-3">Social Media</h6>
-              <a href="#" class="d-block"><i class="fab fa-github fa-3x"></i></a>
-              <a href="#" class="d-block">FB : Arya Pratama</a>
-          </div>
-          <div class="col-md-3 my-0 my-md-5">
-            <h6 class="my-4 my-md-3">CONTACT US</h6>
-            <p>089664704055</p>
-            <p>anandaar0404@gmail.com</p>
-            <a href="https://github.com/AnandaArya">https://github.com/Anandaarya</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col footer-copyright">
-            <p class="my-5">Copyright By <a href="https://github.com/AnandaArya">Ananda Arya</p>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
