Add animation on scroll

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Fonts -->
@@ -42,7 +43,7 @@
 
     <section class="hero">
       <div class="container">
-        <div class="row banner justify-content-between mt-5">
+        <div class="row banner justify-content-between mt-5" data-aos="fade-down" data-aos-delay="200">
           <div class="col-lg-6 mt-5">
             <h3>Hello<br> I'm a Web Developer</h3>
             <!-- <h3>Hello<br> My Name is Ananda Arya Pratama</h3> -->
@@ -59,7 +60,7 @@
 
     <section class="services">
       <div class="container">
-        <div class="row">
+        <div class="row" data-aos="fade-down">
           <div class="col">
             <!-- <p>ABOUT ME</p> -->
             <!-- <hr> -->
@@ -69,7 +70,7 @@
           </div>
         </div>
         <div class="row mt-0 mt-md-5">
-          <div class="col-md-6 col-lg-3 mb-3">
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -81,7 +82,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3">
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="400">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -93,7 +94,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3">
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -105,7 +106,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3">
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="800">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -117,7 +118,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3">
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -129,7 +130,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3">
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -141,7 +142,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3">
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1400">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -153,7 +154,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3">
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1600">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -172,7 +173,7 @@
 
     <section class="services2">
       <div class="container">
-        <div class="row">
+        <div class="row" data-aos="fade-down">
           <div class="col">
             <!-- <p>OUR SERVICES</p> -->
             <!-- <hr> -->
@@ -182,10 +183,10 @@
           </div>
         </div>
         <div class="row justify-content-between">
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <img src="img/portfolio-2.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">Restaurant Website</h4>
             <p class="btn btn-outline-info p-1">PHP</p>
             <p class="btn btn-outline-info p-1">LARAVEL</p>
@@ -196,20 +197,20 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <img src="img/portfolio-4.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">E-Garansi UI Design</h4>
             <p class="btn btn-outline-info p-1">AdobeXD</p>
             <hr class="d-none d-lg-block">
             <p>E-Garansi Web Design built with AdobeXD</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <img src="img/portfolio-1.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">Freehand Landing Page</h4>
             <p class="btn btn-outline-info p-1">HTML</p>
             <p class="btn btn-outline-info p-1">CSS</p>
@@ -219,10 +220,10 @@
             <p>Design By Figmago Convert to Template By Me</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <img src="img/portfolio-5.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">Coinbase Crypto Template</h4>
             <p class="btn btn-outline-info p-1">HTML</p>
             <p class="btn btn-outline-info p-1">SASS</p>
@@ -232,10 +233,10 @@
             <p>Design By Creamory Convert to Template By Me</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <img src="img/portfolio-6.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">Corona Realtime Data</h4>
             <p class="btn btn-outline-info p-1">PHP</p>
             <p class="btn btn-outline-info p-1">CSS</p>
@@ -245,10 +246,10 @@
             <p>Corona Real Time Data API by Kawalcorona</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <img src="img/portfolio-3.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">Web Account Manager</h4>
             <p class="btn btn-outline-info p-1">PHP</p>
             <p class="btn btn-outline-info p-1">Laravel</p>
@@ -259,10 +260,10 @@
             <p>Corona Real Time Data API by Kawalcorona</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <img src="img/portfolio-7.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">Productly Landing Page</h4>
             <p class="btn btn-outline-info p-1">HTML</p>
             <p class="btn btn-outline-info p-1">CSS</p>
@@ -273,10 +274,10 @@
             <p>UI Design by someone Convert to Template By Me</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <img src="img/portfolio-8.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">Corona Game</h4>
             <p class="btn btn-outline-info p-1">HTML</p>
             <p class="btn btn-outline-info p-1">CSS</p>
@@ -284,12 +285,12 @@
             <hr class="d-none d-lg-block">
             <p>Virtual Skill Competition Web Technoligies by GDTLAB Indonesia</p>
             <!-- asdsad -->
-            <hr class="d-sm-block d-lg-none">
+            <hr class="d-sm-block d-lg-none" data-aos="fade-down">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <img src="img/portfolio-9.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">Library Management Apps</h4>
             <p class="btn btn-outline-info p-1">Java</p>
             <p class="btn btn-outline-info p-1">Netbeans</p>
@@ -306,7 +307,7 @@
 
     <section class="akhir mb-5">
       <div class="container">
-        <div class="row bg-primary rounded">
+        <div class="row bg-primary rounded" data-aos="fade-down">
           <div class="col-lg-6 text-light my-4">
               <h3>Interested work with me?</h3>
           </div>
@@ -348,11 +349,15 @@
       </div>
     </section>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script src="js/script.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
 
