Change Navbar Responsive

--- a/index.html
+++ b/index.html
@@ -21,27 +21,26 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-fixed-top pt-lg-4" style="background-color: #ffffff;">
       <div class="container">
-        <a class="navbar-brand" href="#">Ananda Arya</a>
+        <a class="navbar-brand" href="#hero">Ananda Arya</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav navbar-utama ml-auto">
-            <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Portfolio</a>
-            <a class="nav-item nav-link" href="#">Pages</a>
-            <a class="nav-item nav-link" href="#">Blog</a>
-          </div>
-          <div class="navbar-nav tombol-nav ml-0 ml-sm-0 ml-lg-5">
+          <div class="navbar-nav navbar-utama ml-auto px-5 px-lg-0">
+            <a class="nav-item nav-link my-2" href="#hero">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link my-2" href="#services">Skills</a>
+            <a class="nav-item nav-link my-2" href="#services2">Portfolio</a>
+            <a class="nav-item nav-link my-2" href="#akhir">Contact</a>
             <a class="nav-item nav-link tombol-sign btn btn-outline-dark ml-0 ml-lg-5 my-2 px-4" href="https://github.com/AnandaArya"><i class="fab fa-github fa-lg"></i></a>
-            <a class="nav-item nav-link btn btn-dark text-light ml-0 ml-lg-2 my-2 px-4" href="https://www.instagram.com/ananda.aryaa/"><i class="fab fa-instagram fa-lg"></i></a>
+            <a class="nav-item nav-link btn btn-dark ml-0 ml-lg-2 my-2 px-4" href="https://www.instagram.com/ananda.aryaa/"><i class="fab fa-instagram fa-lg ig-color"></i></a>
           </div>
+          
         </div>
       </div>
     </nav>
 
 
-    <section class="hero">
+    <section class="hero" id="hero">
       <div class="container">
         <div class="row banner justify-content-between mt-5" data-aos="fade-down" data-aos-delay="200">
           <div class="col-lg-6 mt-5">
@@ -58,7 +57,7 @@
       </div>
     </section>
 
-    <section class="services">
+    <section class="services" id="services">
       <div class="container">
         <div class="row" data-aos="fade-down">
           <div class="col">
@@ -171,7 +170,7 @@
       </div>
     </section>
 
-    <section class="services2">
+    <section class="services2" id="services2">
       <div class="container">
         <div class="row" data-aos="fade-down">
           <div class="col">
@@ -305,7 +304,7 @@
 
     
 
-    <section class="akhir mb-5">
+    <section class="akhir mb-5" id="akhir">
       <div class="container">
         <div class="row bg-primary rounded" data-aos="fade-down">
           <div class="col-lg-6 text-light my-4">
@@ -335,7 +334,7 @@
     <section class="footer-2">
       <div class="container">
         <hr>
-        <div class="row">
+        <div class="row"  >
           <div class="col-lg-6 my-4">
             <h3>Social Media</h3>
           </div>
