--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-fixed-top pt-lg-4" style="background-color: #ffffff;">
       <div class="container">
-        <a class="navbar-brand" href="#hero">Ananda Arya</a>
+        <a class="navbar-brand" href="#">Ananda Arya</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,8 +47,8 @@
             <h3>Hello<br> I'm a Web Developer</h3>
             <!-- <h3>Hello<br> My Name is Ananda Arya Pratama</h3> -->
             <p class="my-3">My name is Ananda Arya Pratama from Banjarmasin. graduated from major in Software Engineering</p>
-            <a href="#" class="btn btn-primary px-5 my-3">View Project</a>
-            <a href="#" class="btn btn-outline-primary px-5 my-3 ml-2">Learn More</a>
+            <a href="#" class="btn btn-primary px-4 my-3">View Project</a>
+            <a href="#" class="btn btn-outline-primary px-3 my-4 ml-2">Learn More</a>
           </div>
           <div class="col-lg-5">
             <img src="img/hero-img-2.png" class="img-fluid">
