Fix Responsive card

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css">
 
 
-    <title>Hello, world!</title>
+    <title>Hello !!</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-fixed-top pt-lg-4" style="background-color: #ffffff;">
@@ -73,7 +73,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 border rounded-lg py-3 text-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-html5 fa-5x html5-color"></i>
                   </div>
                 </div>
@@ -85,7 +85,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 border rounded-lg py-3 text-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-css3-alt fa-5x css3-color"></i>
                   </div>
                 </div>
@@ -97,7 +97,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 border rounded-lg py-3 text-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-js fa-5x js-color"></i>
                   </div>
                 </div>
@@ -109,7 +109,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 border rounded-lg py-3 text-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-bootstrap fa-5x bootstrap-color"></i>
                   </div>
                 </div>
@@ -121,7 +121,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 border rounded-lg py-3 text-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-php fa-5x php-color"></i>
                   </div>
                 </div>
@@ -133,7 +133,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 border rounded-lg py-3 text-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-laravel fa-5x laravel-color"></i>
                   </div>
                 </div>
@@ -145,7 +145,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 border rounded-lg py-3 text-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="far fa-fire fa-5x ci-color"></i>
                   </div>
                 </div>
@@ -157,7 +157,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 border rounded-lg py-3 text-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-java fa-5x java-color"></i>
                   </div>
                 </div>
@@ -310,9 +310,9 @@
           <div class="col-lg-6 text-light my-4">
               <h3>Interested work with me?</h3>
           </div>
-          <div class="col-lg-6 my-2 my-lg-4 text-lg-right">
-              <a href="#" class="btn btn-light px-4 mr-2 rounded">View More Project</a>
-              <a href="mailto:anandaar0404@gmail.com" class="btn btn btn-outline-light px-4 rounded"><i class="fal fa-envelope fa-lg"> Mail Me....</i></a>
+          <div class="col-lg-6 my-2 my-lg-4 text-center text-lg-right">
+              <a href="#" class="btn btn-light px-4 mr-lg-2 mt-2 mt-md-0 rounded">View More Project</a>
+              <a href="mailto:anandaar0404@gmail.com" class="btn btn-outline-light px-4 rounded mt-2 mt-md-0"><i class="fal fa-envelope fa-lg"> Mail Me.....</i></a>
           </div>
         </div>
       </div>
