--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
           <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">Restaurant Website</h4>
             <p class="btn btn-outline-info p-1">PHP</p>
-            <p class="btn btn-outline-info p-1">LARAVEL</p>
+            <p class="btn btn-outline-info p-1">Laravel</p>
             <p class="btn btn-outline-info p-1">CSS</p>
             <p class="btn btn-outline-info p-1">JS</p>
             <p class="btn btn-outline-info p-1">Bootstrap</p>
             <hr class="d-none d-lg-block">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,</p>
+            <p>Restaurant website, to manage all restaurant data</p>
             <hr class="d-sm-block d-lg-none">
           </div>
           <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
@@ -256,7 +256,7 @@
             <p class="btn btn-outline-info p-1">JS</p>
             <p class="btn btn-outline-info p-1">Bootstrap</p>
             <hr class="d-none d-lg-block">
-            <p>Corona Real Time Data API by Kawalcorona</p>
+            <p>Web Acoount Manager, to manage multiple accounts</p>
             <hr class="d-sm-block d-lg-none">
           </div>
           <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
