--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="container">
         <div class="row banner justify-content-between mt-5" data-aos="fade-down" data-aos-delay="200">
           <div class="col-lg-6 mt-5">
-            <h3>Hello<br> I'm a Fullstack Developer</h3>
+            <h3>Hello<br> I'm a Web Developer</h3>
             <!-- <h3>Hello<br> My Name is Ananda Arya Pratama</h3> -->
             <p class="my-3">My name is Ananda Arya Pratama from Banjarmasin. graduated from major in Software Engineering</p>
             <a href="#" class="btn btn-primary px-4 my-3">View Project</a>
