--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="container">
         <div class="row banner justify-content-between mt-5" data-aos="fade-down" data-aos-delay="200">
           <div class="col-lg-6 mt-5">
-            <h3>Hello<br> I'm a Web Developer</h3>
+            <h3>Hello<br> I'm a Fullstack Developer</h3>
             <!-- <h3>Hello<br> My Name is Ananda Arya Pratama</h3> -->
             <p class="my-3">My name is Ananda Arya Pratama from Banjarmasin. graduated from major in Software Engineering</p>
             <a href="#" class="btn btn-primary px-4 my-3">View Project</a>
@@ -198,7 +198,7 @@
             <hr class="d-sm-block d-lg-none">
           </div>
           <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
-            <img src="img/portfolio-4.png" class="img-fluid img-portfolio border" alt="Services5">
+            <img src="img/portfolio-2.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
           <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <h4 class="mt-lg-5">Restaurant Website</h4>
@@ -308,6 +308,7 @@
             <h4 class="mt-lg-5">Library Management Apps</h4>
             <p class="btn btn-outline-info p-1">Java</p>
             <p class="btn btn-outline-info p-1">Netbeans</p>
+            <p class="btn btn-outline-info p-1">MySQL</p>
             <hr class="d-none d-lg-block">
             <p>Processing Library Data Created Using Java With Netbeans IDE</p>
             <!-- asdsad -->
