--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <i class="fab fa-html5 fa-5x html5-color"></i>
                   </div>
                 </div>
-                <h5 class="card-title mt-4 text-center">HTML 5</h5>
+                <h5 class="card-title mt-4 text-center">HTML</h5>
               </div>
             </div>
           </div>
@@ -89,7 +89,19 @@
                     <i class="fab fa-css3-alt fa-5x css3-color"></i>
                   </div>
                 </div>
-                <h5 class="card-title mt-4 text-center">CSS3</h5>
+                <h5 class="card-title mt-4 text-center">CSS</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
+            <div class="card">
+              <div class="card-body px-3">
+                <div class="row justify-content-center">
+                  <div class="col-3 col-md-6 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                    <i class="fab fa-php fa-5x php-color"></i>
+                  </div>
+                </div>
+                <h5 class="card-title mt-4 text-center">PHP</h5>
               </div>
             </div>
           </div>
@@ -102,6 +114,22 @@
                   </div>
                 </div>
                 <h5 class="card-title mt-4 text-center">JavaScript</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                    <div class="row justify-content-center"">
+                      <div class="col-md-11">
+                        <img src="img/typescript.png" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <h5 class="card-title mt-4 text-center">Typescript</h5>
               </div>
             </div>
           </div>
@@ -122,13 +150,58 @@
               <div class="card-body px-4">
                 <div class="row justify-content-center">
                   <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="fab fa-php fa-5x php-color"></i>
+                    <i class="fab fa-react fa-5x react-color"></i>
                   </div>
                 </div>
-                <h5 class="card-title mt-4 text-center">PHP</h5>
+                <h5 class="card-title mt-4 text-center">ReactJS</h5>
               </div>
             </div>
           </div>
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                    <div class="row justify-content-center"">
+                      <div class="col-md-11">
+                        <img src="img/nextjs.png" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <h5 class="card-title mt-4 text-center">NextJS</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
+            <div class="card">
+              <div class="card-body px-3">
+                <div class="row justify-content-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                    <i class="fab fa-node fa-5x nodejs-color"></i>
+                  </div>
+                </div>
+                <h5 class="card-title mt-4 text-center">NodeJS</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                    <div class="row justify-content-center"">
+                      <div class="col-md-11">
+                        <img src="img/express-logo.png" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <h5 class="card-title mt-4 text-center">Express</h5>
+              </div>
+            </div>
+          </div>
+          
           <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1200">
             <div class="card">
               <div class="card-body px-4">
@@ -141,7 +214,23 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1400">
+          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                    <div class="row justify-content-center"">
+                      <div class="col-md-11">
+                        <img src="img/mongodb.png" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <h5 class="card-title mt-4 text-center">Mongodb</h5>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1400">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -152,8 +241,8 @@
                 <h5 class="card-title mt-4 text-center">Codeigniter</h5>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1600">
+          </div> -->
+          <!-- <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1600">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -164,7 +253,7 @@
                 <h5 class="card-title mt-4 text-center">Java</h5>
               </div>
             </div>
-          </div>
+          </div> -->
           
         </div>
       </div>
@@ -182,6 +271,20 @@
           </div>
         </div>
         <div class="row justify-content-between">
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+            <img src="img/portfolio-0.png" class="img-fluid img-portfolio border" alt="Services5">
+          </div>
+          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+            <h4 class="mt-lg-5">Website Topup Voucher Game</h4>
+            <p class="btn btn-outline-info p-1">Typescript</p>
+            <p class="btn btn-outline-info p-1">NextJS</p>
+            <p class="btn btn-outline-info p-1">NodeJS</p>
+            <p class="btn btn-outline-info p-1">Express</p>
+            <p class="btn btn-outline-info p-1">MongoDB</p>
+            <hr class="d-none d-lg-block">
+            <p>Website for top up or buy online game vouchers</p>
+            <hr class="d-sm-block d-lg-none">
+          </div>
           <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
             <img src="img/portfolio-10.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
